Fix overflow, add footer

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,6 @@ html{
     margin:0px;
     padding:0px;
     font-family:sans-serif;
-    
 }
 body{
     margin:0px;
@@ -26,4 +25,18 @@ body{
 }
 #main{
     padding:20px;
+}
+footer{
+    width:100%;
+    background-color:White;
+    padding-left:10px;
+    padding-right:10px;
+    font-size:12px;
+    box-sizing:border-box;
+    *{
+        display:inline-block;
+    }
+    .copy{
+        float:right;
+    }
 }
